--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
     background-color: #20381F;
     color: #e5e7eb;
     font-size: 18px;
+    min-width: 800px;
 }
 
 header {
-    margin-inline: 10%;
+    margin-inline: 150px;
     display:flex;
     flex-direction: row;
     align-items: center;
@@ -19,15 +20,168 @@ header h1 {
 }
 
 header nav {
-    justify-self: flex-end;
+    display: flex;
+    justify-content:flex-end;
     flex: 1;
 }
 
 header nav a {
     color: #e5e7eb;
     text-decoration: none;
+    margin-left: 20px;
 }
 
 header nav a:hover {
     text-decoration: underline;
+}
+
+.section-introduction {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-inline: 150px;
+    margin-top: 50px;
+}
+
+.introduction-content {
+    flex: 1;
+    align-self: flex-start;
+}
+
+.introduction-image {
+    flex: 1;
+}
+
+.introduction-content h2 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+    margin-block: 0;
+}
+
+.introduction-content p {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.introduction-content button {
+    background-color: #3882F6;
+    color: #f9faf8;
+    font-weight: 600;
+    border: none;
+    padding: 7px 25px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.introduction-image img {
+    width: 100%;
+    height: auto;
+}
+
+.section-info {
+    background-color: #f9faf8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    padding-bottom: 100px;
+}
+
+.section-info h3 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.info-images {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.image-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.image-box img {
+    width: 200px;
+    height: 200px;
+    border: 2px solid #3882F6;
+    border-radius: 10px;
+}
+
+.image-box span {
+    text-align: center;
+    color: #1f2937;
+}
+
+.section-quote {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-inline: 300px;
+}
+
+.section-quote p {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    margin-bottom: 0;
+}
+
+.section-quote span {
+    width: 100%;
+    text-align: end;
+    color: #1F2937;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.section-action {
+    background-color: #f9faf8;
+    align-items: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-inline: 150px;
+}
+
+.action {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3882F6;
+    border-radius: 5px;
+    padding: 40px 150px;
+}
+
+.action-text h4 {
+    color: #f9faf8;
+    font-size: 24px;
+    margin:0;
+}
+
+.action-text p {
+    margin:0;
+}
+
+.action-button {
+    background-color: #3882F6;
+    color: #f9faf8;
+    font-weight: 600;
+    border: 2px solid #f9faf8;
+    padding: 7px 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    height:fit-content;
+}
+
+footer p {
+    margin-block: 40px;
+    text-align: center;
 }
